# agentic-ai-rag-question-answering

./: .gitignore  Makefile  README.md  UV_SETUP.md  chatbot.py  main.py  pyproject.toml  requirements.txt
src/answering/: answer.py
src/config/: config.yml
src/evaluation/: evaluate.py  evaluator_ui.py  test.py
src/implementation/: chunking.py  ingest.py
src/prepare_vector_db/: chunking.py  ingest.py  pydantic_models.py
src/prompts/: prompts.py
src/utils/: prompts.py  pydantic_models.py  utils.py
